--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <script src="app/controllers/stock.js"></script>
   <script src="app/controllers/stockhistory.js"></script>
   <script src="app/controllers/stockreport.js"></script>
+  <script src="app/controllers/topping.js"></script>
   <style>
  .ta-editor {
   min-height: 300px;
